--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@
     font-size: calc(20px + 0.390625vw);
 }
 
+.c-font-score {
+    font-size: calc(30px + 0.390625vw);
+}
+
 .c-animate-correct {
     animation: correct 1s;
     animation-iteration-count: 1;
